--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="youtubeColor">#F44336</color>
     <color name="quitColor">#777777</color>
     <color name="browserColor">#03A9F4</color>
+    <color name="buttonColor">#D7D7D7</color>
+    <color name="buttonHoldColor">#A0A0A0</color>
 </resources>
